--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@angular/platform-server": "~9.1.7",
     "@angular/router": "~9.1.7",
     "@bhayward93/ckeditor5-build-minds": "^1.1.5",
-    "@ckeditor/ckeditor5-angular": "^1.1.2",
+    "@ckeditor/ckeditor5-angular": "^1.2.3",
     "@danielmoncada/angular-datetime-picker": "^9.3.1",
     "@gorniv/ngx-universal": "^2.2.2",
     "@nguniversal/builders": "~9.1.1",
@@ -59,7 +59,8 @@
     "ethjs-signer": "0.1.1",
     "express-http-proxy": "^1.6.0",
     "global": "^4.3.2",
-    "highlight.js": "^9.18.0",
+    "highlight.js": "^10.1.1",
+    "hljs": "^6.2.3",
     "macy": "^2.5.1",
     "material-design-icons": "~3.0.1",
     "material-design-lite": "~1.3.0",
