(chore): use vendor chunk for prod builds

--- a/angular.json
+++ b/angular.json
@@ -101,7 +101,7 @@
               "aot": true,
               "localize": true,
               "extractLicenses": true,
-              "vendorChunk": false,
+              "vendorChunk": true,
               "buildOptimizer": true,
               "fileReplacements": [
                 {
