(feat): implement cta modal for pay and card modal... plus nicer sass handling - closes #3508 #3509

--- a/angular.json
+++ b/angular.json
@@ -85,7 +85,10 @@
               "node_modules/material-design-lite/dist/material.min.js",
               "node_modules/medium-editor/dist/js/medium-editor.min.js",
               "src/shims/jitsi-api.min.js"
-            ]
+            ],
+            "stylePreprocessorOptions": {
+              "includePaths": ["src/stylesheets"]
+            }
           },
           "configurations": {
             "production": {
@@ -166,7 +169,10 @@
               "src/shims/jitsi-api.min.js"
             ],
             "assets": ["src/assets", "src/favicon.ico"],
-            "polyfills": "src/polyfills.ts"
+            "polyfills": "src/polyfills.ts",
+            "stylePreprocessorOptions": {
+              "includePaths": ["src/stylesheets"]
+            }
           }
         },
         "lint": {
@@ -181,7 +187,10 @@
           "options": {
             "outputPath": "dist/server",
             "main": "server.ts",
-            "tsConfig": "tsconfig.server.json"
+            "tsConfig": "tsconfig.server.json",
+            "stylePreprocessorOptions": {
+              "includePaths": ["src/stylesheets"]
+            }
           },
           "configurations": {
             "production": {
@@ -224,7 +233,7 @@
   "schematics": {
     "@schematics/angular:component": {
       "prefix": "m",
-      "styleext": ".ng.scss"
+      "styleext": "ng.scss"
     },
     "@schematics/angular:directive": {
       "prefix": "m"
