(fix): APP_CDN can not be used within .ng.scss

--- a/package.json
+++ b/package.json
@@ -91,9 +91,9 @@
     "cypress-file-upload": "^3.3.3",
     "gulp": "~4.0.0",
     "gulp-autoprefixer": "^6.0.0",
-    "gulp-css-globbing": "^0.2.2",
     "gulp-minify-css": "^1.1.6",
     "gulp-sass": "^4.0.2",
+    "gulp-sass-glob": "^1.1.0",
     "gulp-template": "^5.0.0",
     "husky": "^3.0.4",
     "jasmine-core": "~2.99.0",
