--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -342,7 +342,7 @@ deploy:canary:
     name: canary
     url: https://www.minds.com/?canary=1 # requires canary cookie
   when: manual
-  allow_failure: false # prevents auto deploy to full production
+  allow_failure: true
   only:
     refs:
       - master
@@ -358,8 +358,7 @@ deploy:production:
   environment:
     name: production
     url: https://www.minds.com
-  when: delayed
-  start_in: 12 hours # reduce? can always be deployed manually earlier too
+  when: manual
   only:
     refs:
       - master
