Adding in pre and post commit hooks for extracting i18n

--- a/package.json
+++ b/package.json
@@ -120,7 +120,8 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "sh .githooks/pre-commit && pretty-quick --staged --bail --pattern \"**/*.*(ts|html|scss)\""
+      "pre-commit": "sh .githooks/pre-commit && pretty-quick --staged --bail --pattern \"**/*.*(ts|html|scss)\"",
+      "post-commit": "sh .githooks/post-commit"
     }
   }
 }
