--- a/angular.json
+++ b/angular.json
@@ -77,6 +77,8 @@
             "polyfills": "src/polyfills.ts",
             "extractCss": true,
             "aot": true,
+            "serviceWorker": true,
+            "ngswConfigPath": "ngsw-config.json",
             "localize": ["en"],
             "assets": ["src/assets", "src/favicon.ico", "src/manifest.webmanifest"],
             "styles": [
@@ -114,9 +116,7 @@
                   "replace": "src/environments/environment.ts",
                   "with": "src/environments/environment.prod.ts"
                 }
-              ],
-              "serviceWorker": true,
-              "ngswConfigPath": "ngsw-config.json"
+              ]
             },
             "hmr": {
               "fileReplacements": [
