--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "@angular/platform-browser-dynamic": "~9.1.12",
     "@angular/platform-server": "~9.1.12",
     "@angular/router": "~9.1.12",
+    "@bhayward93/ckeditor5-build-minds": "^1.1.7",
+    "@ckeditor/ckeditor5-angular": "^1.2.3",
     "@danielmoncada/angular-datetime-picker": "^9.3.1",
     "@gorniv/ngx-universal": "^2.2.2",
     "@nguniversal/builders": "~9.1.1",
@@ -47,8 +49,6 @@
     "angular-plotly.js": "^2.0.0",
     "bn.js": "^4.11.8",
     "braintree-web": "3.41.0",
-    "@bhayward93/ckeditor5-build-minds": "^1.1.7",
-    "@ckeditor/ckeditor5-angular": "^1.2.3",
     "cookie-parser": "^1.4.4",
     "core-js": "~2.6.2",
     "ethjs": "~0.4.0",
@@ -59,6 +59,7 @@
     "global": "^4.3.2",
     "highlight.js": "^10.1.1",
     "macy": "^2.5.1",
+    "marked": "^1.1.1",
     "material-design-icons": "~3.0.1",
     "material-design-lite": "~1.3.0",
     "medium-editor": "^5.23.2",
