--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -117,7 +117,7 @@ build:review:
       - master
       - production
       - test/gitlab-ci
-      - epic/angular-9
+      - chore/z-index-3790
   tags:
     - angular
 
@@ -140,7 +140,7 @@ build:production:bundles:
       - master
       - production
       - test/gitlab-ci
-      - epic/angular-9
+      - chore/z-index-3790
   tags:
     - angular
 
@@ -175,7 +175,7 @@ prepare:review:
       - master
       - production
       - test/gitlab-ci
-      - epic/angular-9
+      - chore/z-index-3790
 
 prepare:review:sentry:
   <<: *sentry_prepare
@@ -186,7 +186,7 @@ prepare:review:sentry:
       - master
       - production
       - test/gitlab-ci
-      - epic/angular-9
+      - chore/z-index-3790
   dependencies:
     - build:review
 
@@ -205,8 +205,8 @@ prepare:production:
     refs:
       - master
       - production
-      - epic/angular-9
       - test/gitlab-ci
+      - chore/z-index-3790
   dependencies:
     - build:production:bundles
 
@@ -219,7 +219,7 @@ prepare:production:sentry:
       - master
       - production
       - test/gitlab-ci
-      - epic/angular-9
+      - chore/z-index-3790
   dependencies:
     - build:production:bundles
 
@@ -243,7 +243,7 @@ prepare:production:sentry:
       - master
       - production
       - test/gitlab-ci
-      - epic/angular-9
+      - chore/z-index-3790
 
 review:start:
   stage: review
@@ -272,7 +272,7 @@ review:start:
       - master
       - production
       - test/gitlab-ci
-      - epic/angular-9
+      - chore/z-index-3790
 
 review:stop:
   <<: *cleanup_review
@@ -316,6 +316,7 @@ staging:fpm:
     refs:
       - master
       - test/gitlab-ci
+      - chore/z-index-3790
 
 review:preprod:
   <<: *deploy
@@ -348,6 +349,7 @@ deploy:canary:
       - master
       - test/gitlab-ci
       - epic/angular-9
+      - chore/z-index-3790
 
 deploy:production:
   <<: *deploy
@@ -377,3 +379,4 @@ cleanup:review: # We stop the review site after the e2e tests have run
       - master
       - production
       - test/gitlab-ci
+      - chore/z-index-3790
