(feat) Adaptation of web3modal for angular [WIP]

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@nguniversal/module-map-ngfactory-loader": "~8.2.6",
     "@nguniversal/socket-engine": "~9.1.1",
     "@sentry/browser": "^5.11.1",
+    "@walletconnect/web3-provider": "^1.2.2",
     "angular-plotly.js": "^2.0.0",
     "bn.js": "^4.11.8",
     "braintree-web": "3.41.0",
@@ -56,6 +57,7 @@
     "ethjs-provider-signer": "^0.1.4",
     "ethjs-signer": "0.1.1",
     "express-http-proxy": "^1.6.0",
+    "fortmatic": "^2.2.1",
     "global": "^4.3.2",
     "highlight.js": "^10.1.1",
     "macy": "^2.5.1",
