--- a/package.json
+++ b/package.json
@@ -45,7 +45,9 @@
     "@nguniversal/express-engine": "~9.1.1",
     "@nguniversal/module-map-ngfactory-loader": "~8.2.6",
     "@nguniversal/socket-engine": "~9.1.1",
+    "@portis/web3": "^2.0.0-beta.59",
     "@sentry/browser": "^5.11.1",
+    "@toruslabs/torus-embed": "^1.8.5",
     "@walletconnect/web3-provider": "^1.2.2",
     "angular-plotly.js": "^2.0.0",
     "bn.js": "^4.11.8",
@@ -75,6 +77,7 @@
     "qrcodejs2": "0.0.2",
     "rxjs": "~6.6.0",
     "socket.io-client": "^2.2.0",
+    "squarelink": "^1.1.4",
     "textarea-caret": "^3.1.0",
     "tslib": "~1.13.0",
     "webpack-node-externals": "^1.7.2",
