--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "@bhayward93/ckeditor5-build-minds": "^1.1.7",
     "@ckeditor/ckeditor5-angular": "^1.2.3",
     "@danielmoncada/angular-datetime-picker": "^9.3.1",
-    "@dorgtech/web3modal-ts": "^0.0.2-alpha",
+    "@dorgtech/web3-wallet-connector": "^1.0.0-alpha",
     "@gorniv/ngx-universal": "^2.2.2",
     "@nguniversal/builders": "~9.1.1",
     "@nguniversal/common": "~9.1.1",
