--- a/angular.json
+++ b/angular.json
@@ -277,10 +277,9 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/browser",
-            "index": "src/app/modules/embed/embed.template.html",
-            "baseHref": "/static/",
-            "deleteOutputPath": false,
+            "outputPath": "dist/embed",
+            "index": "src/app/modules/embed/embed.html",
+            "baseHref": "/embed-static/",
             "main": "src/app/modules/embed/main.ts",
             "tsConfig": "src/tsconfig.app.json",
             "polyfills": "src/polyfills.ts",
