--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -135,6 +135,7 @@ build:production:bundles:
     paths:
       - dist/browser
       - dist/server
+      - dist/embed
   only:
     refs:
       - master
