Auto stash before merge of "feat-embeddable-video-player" and "origin/feat-embeddable-video-player"

--- a/angular.json
+++ b/angular.json
@@ -204,8 +204,8 @@
                   "with": "src/environments/environment.prod.ts"
                 }
               ],
-              "sourceMap": false,
-              "optimization": true
+              "sourceMap": true,
+              "optimization": false
             }
           }
         }
