Revert "Auto stash before merge of "feat-embeddable-video-player" and "origin/feat-embeddable-video-player""
This reverts commit 2bbb3a3a9f84cd68985d7df87c03c7e5444ac957.

--- a/angular.json
+++ b/angular.json
@@ -204,8 +204,8 @@
                   "with": "src/environments/environment.prod.ts"
                 }
               ],
-              "sourceMap": true,
-              "optimization": false
+              "sourceMap": false,
+              "optimization": true
             }
           }
         }
