--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "lint": "ng lint",
     "e2e": "cypress run --debug",
     "e2e-open": "cypress open",
-    "postinstall": "node patch.js",
+    "postinstall": "node patch.js && ngcc",
     "serve:ssr": "node dist/server/main",
     "build:ssr": "ng run minds:server:production",
     "build:ssr:dev": "ng run minds:server:production",
@@ -39,7 +39,7 @@
     "@bhayward93/ckeditor5-build-minds": "^1.1.7",
     "@ckeditor/ckeditor5-angular": "^1.2.3",
     "@danielmoncada/angular-datetime-picker": "^9.3.1",
-    "@dorgtech/web3modal-angular": "^1.0.5",
+    "@dorgtech/web3modal-angular": "^1.0.6",
     "@gorniv/ngx-universal": "^2.2.2",
     "@nguniversal/builders": "~9.1.1",
     "@nguniversal/common": "~9.1.1",
