--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "@bhayward93/ckeditor5-build-minds": "^1.1.7",
     "@ckeditor/ckeditor5-angular": "^1.2.3",
     "@danielmoncada/angular-datetime-picker": "^9.3.1",
-    "@dorgtech/web3modal-angular": "^1.1.0",
+    "@dorgtech/web3modal-angular": "^1.2.1",
     "@gorniv/ngx-universal": "^2.2.2",
     "@nguniversal/builders": "~9.1.1",
     "@nguniversal/common": "~9.1.1",
@@ -83,6 +83,7 @@
     "squarelink": "^1.1.4",
     "textarea-caret": "^3.1.0",
     "tslib": "~1.13.0",
+    "walletlink": "^2.0.2",
     "webpack-node-externals": "^1.7.2",
     "webtorrent": "^0.103.0",
     "zone.js": "~0.10.3"
