--- a/package.json
+++ b/package.json
@@ -46,7 +46,10 @@
     "@nguniversal/express-engine": "~9.1.1",
     "@nguniversal/module-map-ngfactory-loader": "~8.2.6",
     "@nguniversal/socket-engine": "~9.1.1",
+    "@portis/web3": "^2.0.0-beta.59",
     "@sentry/browser": "^5.27.3",
+    "@toruslabs/torus-embed": "^1.8.5",
+    "@walletconnect/web3-provider": "^1.2.2",
     "angular-plotly.js": "^2.0.0",
     "authereum": "^0.1.0",
     "bn.js": "^4.11.8",
