--- a/package.json
+++ b/package.json
@@ -66,10 +66,10 @@
     "moment": "^2.24.0",
     "ngx-drag-drop": "^2.0.0",
     "ngx-image-cropper": "^3.1.6",
-    "ngx-plyr": "~4.0.0",
+    "ngx-plyr": "^4.0.0",
     "node-cache": "^5.1.0",
     "plotly.js": "^1.54.1",
-    "plyr": "^3.5.6",
+    "plyr": "^3.6.2",
     "qrcodejs2": "0.0.2",
     "rxjs": "~6.6.0",
     "socket.io-client": "^2.2.0",
