--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@nguniversal/express-engine": "~9.1.1",
     "@nguniversal/module-map-ngfactory-loader": "~8.2.6",
     "@nguniversal/socket-engine": "~9.1.1",
+    "@transak/transak-sdk": "^1.0.25",
     "@sentry/browser": "^5.27.3",
     "@walletconnect/web3-provider": "^1.2.2",
     "angular-plotly.js": "^2.0.0",
