--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -52,11 +52,11 @@ lint:
     - echo "E2E tests for $CI_BUILD_REF_NAME running against $E2E_DOMAIN with user $CYPRESS_username"
     - git clone https://gitlab.com/benhayward.ben/cypress-tests/
     - mv ./cypress-tests cypress
-    - BRANCH_EXISTS=$(git ls-remote --heads https://www.github.com/minds/front master | wc -l)
+    - BRANCH_EXISTS=$(git ls-remote --heads https://www.github.com/benhayward.ben/cypress-tests $CI_BUILD_RE_NAME | wc -l)
     - if [ $BRANCH_EXISTS == "1" ] ; then
     -    echo "Checking out $CI_BUILD_REF_NAME" 
     -    cd ./cypress
-    -    git checkout $CI_BUILD_REF_NAME
+    -    git checkout $CI_BUILD_REF_NAME 2>/dev/null
     -    cd ..
     - fi;
     - >
