--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -49,16 +49,17 @@ lint:
         export PRODUCTION=false
       fi
     - export CYPRESS_baseUrl=$E2E_DOMAIN
-    - echo "E2E tests for $CI_BUILD_REF_NAME running against $E2E_DOMAIN with user $CYPRESS_username"
-    - git clone --branch=master https://gitlab-ci-token:${CI_JOB_TOKEN}@gitlab.com/benhayward.ben/cypress-tests.git
+    - echo "Preparing E2E tests for $CI_BUILD_REF_NAME running against $E2E_DOMAIN with user $CYPRESS_username"
+    - git clone --branch=master https://gitlab-ci-token:${CI_JOB_TOKEN}@gitlab.com/minds/cypress-tests.git
     - mv ./cypress-tests cypress
-    - BRANCH_EXISTS=$(git ls-remote --heads https://www.gitlab.com/benhayward.ben/cypress-tests $CI_BUILD_RE_NAME | wc -l)
+    - BRANCH_EXISTS=$(git ls-remote --heads https://www.gitlab.com/minds/cypress-tests $CI_BUILD_REF_NAME | wc -l)
     - if [ $BRANCH_EXISTS == "1" ] ; then
-    -    echo "Checking out $CI_BUILD_REF_NAME" 
+    -    echo "Matching branch exists, checking out $CI_BUILD_REF_NAME".. 
     -    cd ./cypress
     -    git checkout $CI_BUILD_REF_NAME 2>/dev/null
     -    cd ..
     - fi;
+    - echo "Running Cypress"
     - >
       $(npm bin)/cypress run --browser chrome
       --parallel
