--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -54,7 +54,7 @@ lint:
     - echo "Checking if branch exists..."
     - BRANCH_EXISTS=$(git ls-remote --heads https://www.gitlab.com/minds/cypress-tests $CI_BUILD_REF_NAME | wc -l)
     - if [ $BRANCH_EXISTS == "1" ] ; then
-    -    echo "Matching branch exists, checking out $CI_BUILD_REF_NAME".. 
+    -    echo "Matching branch exists, checking out $CI_BUILD_REF_NAME..." 
     -    cd ./cypress-tests
     -    git checkout $CI_BUILD_REF_NAME 2>/dev/null
     -    cd ..
