--- a/package.json
+++ b/package.json
@@ -41,15 +41,16 @@
     "@bhayward93/ckeditor5-build-minds": "^1.1.7",
     "@ckeditor/ckeditor5-angular": "^1.2.3",
     "@danielmoncada/angular-datetime-picker": "^9.3.1",
-    "@mindsorg/web3modal-angular": "^1.3.1",
     "@gorniv/ngx-universal": "^2.2.2",
+    "@mindsorg/web3modal-angular": "^1.3.1",
     "@nguniversal/builders": "~9.1.1",
     "@nguniversal/common": "~9.1.1",
     "@nguniversal/express-engine": "~9.1.1",
     "@nguniversal/module-map-ngfactory-loader": "~8.2.6",
     "@nguniversal/socket-engine": "~9.1.1",
-    "@transak/transak-sdk": "^1.0.25",
     "@sentry/browser": "^5.27.3",
+    "@transak/transak-sdk": "^1.0.25",
+    "@types/hls.js": "^0.13.3",
     "@walletconnect/web3-provider": "^1.2.2",
     "angular-plotly.js": "^2.0.0",
     "bn.js": "^4.11.8",
@@ -65,6 +66,7 @@
     "fortmatic": "^2.2.1",
     "global": "^4.3.2",
     "highlight.js": "^10.1.1",
+    "hls.js": "^0.14.17",
     "macy": "^2.5.1",
     "marked": "^1.1.1",
     "material-design-icons": "~3.0.1",
@@ -76,7 +78,7 @@
     "ngx-plyr": "^4.0.0",
     "node-cache": "^5.1.0",
     "plotly.js": "^1.54.1",
-    "plyr": "^3.6.2",
+    "plyr": "^3.6.4",
     "qrcodejs2": "0.0.2",
     "rxjs": "~6.6.0",
     "socket.io-client": "^2.2.0",
