--- a/package.json
+++ b/package.json
@@ -49,7 +49,10 @@
     "@nguniversal/module-map-ngfactory-loader": "~8.2.6",
     "@nguniversal/socket-engine": "~9.1.1",
     "@sentry/browser": "^5.27.3",
+    "@sentry/node": "^6.3.0",
+    "@sentry/tracing": "^6.3.0",
     "@transak/transak-sdk": "^1.0.25",
+    "@types/express": "^4.17.11",
     "@types/hls.js": "^0.13.3",
     "@walletconnect/web3-provider": "^1.2.2",
     "angular-plotly.js": "^2.0.0",
