Add npm i command for cypress to install its own deps

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -68,6 +68,7 @@ lint:
     -    git checkout $CI_BUILD_REF_NAME 2>/dev/null
     -    cd ..
     - fi;
+    - npm i
     - echo "Running Cypress"
     - >
       cypress run --browser chrome
