--- a/angular.json
+++ b/angular.json
@@ -76,7 +76,6 @@
             "tsConfig": "src/tsconfig.app.json",
             "polyfills": "src/polyfills.ts",
             "extractCss": true,
-            "aot": true,
             "localize": ["en"],
             "assets": ["src/assets", "src/favicon.ico"],
             "styles": [
@@ -92,7 +91,13 @@
             ],
             "stylePreprocessorOptions": {
               "includePaths": ["src/stylesheets"]
-            }
+            },
+            "vendorChunk": true,
+            "extractLicenses": false,
+            "buildOptimizer": false,
+            "sourceMap": true,
+            "optimization": false,
+            "namedChunks": true
           },
           "configurations": {
             "production": {
@@ -105,10 +110,8 @@
               },
               "extractCss": true,
               "namedChunks": false,
-              "aot": true,
               "localize": true,
               "extractLicenses": true,
-              "vendorChunk": true,
               "buildOptimizer": true,
               "fileReplacements": [
                 {
@@ -125,7 +128,8 @@
                 }
               ]
             }
-          }
+          },
+          "defaultConfiguration": ""
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
@@ -194,7 +198,9 @@
             "tsConfig": "tsconfig.server.json",
             "stylePreprocessorOptions": {
               "includePaths": ["src/stylesheets"]
-            }
+            },
+            "sourceMap": true,
+            "optimization": false
           },
           "configurations": {
             "production": {
@@ -207,7 +213,8 @@
               "sourceMap": false,
               "optimization": true
             }
-          }
+          },
+          "defaultConfiguration": ""
         }
       }
     },
@@ -231,14 +238,19 @@
             "tsConfig": "src/app/modules/embed/tsconfig.json",
             "polyfills": "src/polyfills.ts",
             "extractCss": true,
-            "aot": true,
             "outputHashing": "bundles",
             "localize": ["en"],
             "assets": ["src/favicon.ico"],
             "styles": ["node_modules/plyr/dist/plyr.css", "src/main.css"],
             "stylePreprocessorOptions": {
               "includePaths": ["src/stylesheets"]
-            }
+            },
+            "vendorChunk": true,
+            "extractLicenses": false,
+            "buildOptimizer": false,
+            "sourceMap": true,
+            "optimization": false,
+            "namedChunks": true
           },
           "configurations": {
             "production": {
@@ -251,11 +263,8 @@
               },
               "extractCss": true,
               "namedChunks": false,
-              "aot": true,
               "localize": true,
               "extractLicenses": true,
-              "vendorChunk": true,
-              "buildOptimizer": false,
               "fileReplacements": [
                 {
                   "replace": "src/environments/environment.ts",
@@ -271,7 +280,8 @@
                 }
               ]
             }
-          }
+          },
+          "defaultConfiguration": ""
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
