--- a/package.json
+++ b/package.json
@@ -94,8 +94,8 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "12.1.2",
-    "@angular/cli": "^12.1.2",
+    "@angular-devkit/build-angular": "^12.1.4",
+    "@angular/cli": "^12.1.4",
     "@angular/compiler-cli": "~12.1.2",
     "@angular/language-service": "~12.1.2",
     "@angularclass/hmr": "^3.0.0",
