--- a/package.json
+++ b/package.json
@@ -87,14 +87,14 @@
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "textarea-caret": "^3.1.0",
-    "tslib": "^2.0.0",
+    "tslib": "^2.3.0",
     "walletlink": "^2.0.2",
     "webtorrent": "^0.103.0",
     "yargs": "^17.0.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^12.1.4",
+    "@angular-devkit/build-angular": "12.1.4",
     "@angular/cli": "^12.1.4",
     "@angular/compiler-cli": "~12.1.2",
     "@angular/language-service": "~12.1.2",
