WIP: hovercard enhancements

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@nguniversal/common": "~12.1.0",
     "@nguniversal/express-engine": "~12.1.0",
     "@nguniversal/socket-engine": "~12.1.0",
+    "@popperjs/core": "^2.9.3",
     "@sentry/browser": "^6.9.0",
     "@sentry/node": "^6.9.0",
     "@sentry/tracing": "^6.9.0",
@@ -77,6 +78,7 @@
     "ngx-drag-drop": "^2.0.0",
     "ngx-image-cropper": "^4.0.1",
     "ngx-plyr": "^4.0.0",
+    "ngx-popperjs": "^12.1.2",
     "node-cache": "^5.1.2",
     "os-browserify": "^0.3.0",
     "plotly.js": "^2.2.1",
